# fair-allocation-transformer

./: pyproject.toml
training/: losses.py  train.py  train_residual.py  train_variable_size.py
