[project]
name = "envy-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "gurobipy>=12.0.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numba>=0.63.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "torch",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true